FIX: Asteroid overlap issue

--- a/NYU-Web-Dev/Final-Project/style.css
+++ b/NYU-Web-Dev/Final-Project/style.css
@@ -69,10 +69,12 @@ img{
 
 #game_over{
     position: absolute;
+    padding: 10px;
     text-align: center;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     background-color: black;
     font-size: 4vh;
+    z-index: 10;
 }
